# Imhotep-The-Duel

./: CMakeLists.txt  README.md  runTests.sh  setup.bat  setup.sh  update.bat  update.sh
UNITY UI/imhotep_duell_BurstDebugInformation_DoNotShip/Data/Plugins/: lib_burst_generated.txt
UNITY UI/imhotep_duell_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.assets  sharedassets0.assets.resS  sharedassets0.resource
UNITY UI/imhotep_duell_Data/Resources/: unity_builtin_extra
src/: AImove.cpp  AImove.hpp  HandleGame.cpp  HandleGame.hpp  LegalMoves.cpp  LegalMoves.hpp  Parse.cpp  Parse.hpp  PlayerStats.cpp  PlayerStats.hpp  PrimaryGame.cpp  PrimaryGame.hpp  PrimaryGameAI.cpp  PrimaryGameAI.hpp  main.cpp  mainAI.cpp
